--- a/css/index.scss
+++ b/css/index.scss
@@ -149,7 +149,7 @@ i{
                     bottom: 0;
                     width:2.90rem;
                     height: 0.01rem;
-                    background:#ccc;
+                    background:#fff;
                     display: none;
                 }
             }
